integration_tests/codegen_fail/fail/interface/trait/implementers_duplicate_ugly.rs
use juniper::{graphql_interface, GraphQLObject};

#[derive(GraphQLObject)]
#[graphql(impl = CharacterValue)]
pub struct ObjA {
    id: String,
}

type ObjAlias = ObjA;

#[graphql_interface(for = [ObjA, ObjAlias])]
trait Character {
    fn id(&self) -> &str;
}

fn main() {}
